CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(lispy)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_COMPILER g++)
ADD_COMPILE_OPTIONS("-std=c++1y")
ADD_COMPILE_OPTIONS("-Wall")

SET(LISP_SRCS
	main.cc
	lexical.cc
	eval.cc
	symbol_table.cc
	parser.cc
	builtin.cc
	lambda.cc
	val.cc
	native.cc
)

SET(LEXICAL_MAP_SRCS
	lexical_map_gen.cc
)

SET(NATIVE_TEST_SRCS
	native_test.cc
)

ADD_EXECUTABLE(lispy ${LISP_SRCS})
ADD_EXECUTABLE(lexical_map ${LEXICAL_MAP_SRCS})
ADD_LIBRARY(native_test SHARED ${NATIVE_TEST_SRCS})
TARGET_LINK_LIBRARIES(lispy dl)

ADD_CUSTOM_TARGET(debug
	COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug ${CMAKE_SOURCE_DIR}
	COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
	COMMENT "Switch CMAKE_BUILD_TYPE to Debug"

)
ADD_CUSTOM_TARGET(release
	COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
	COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
	COMMENT "Switch CMAKE_BUILD_TYPE to Release"
)
